--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "pdf-to-excel": "^0.3.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {},
