--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,13 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "pdf-to-excel": "^0.3.2",
     "xlsx": "^0.18.5"
   },
-  "devDependencies": {},
   "description": ""
 }
