--- a/backend/config.json
+++ b/backend/config.json
@@ -1,5 +1,5 @@
 {
-    "programs": ["BSCS", "BACA", "BAPHLO", "BASOC", "BSAPHY", "BSCHEM"],
+    "programs": ["BAPHLO", "BASOC", "BSAC", "BSAPHY", "BSCHEM", "BSMATH", "BSSTAT", "BSMST", "BACA", "BSCS", "BSAMAT"],
     "course": {
         "BSCS": ["CMSC 12", "CMSC 56", "MATH 27", "CMSC 21", "CMSC 57", "MATH 28", "CMSC 22", "CMSC 150", "CMSC 123", "CMSC 130", "CMSC 23", "CMSC 100", "CMSC 127", "CMSC 131", "STAT 101", "CMSC 124", "CMSC 125", "CMSC 141", "CMSC 170", "CMSC 132", "CMSC 128", "CMSC 142", "CMSC 137", "CMSC 173", "CMSC 180", "CMSC 199", "ENG 10"],
         "BAPHLO": ["PHLO 11","PHLO 12","ECON 11","POSC 10","PHLO 150","PHLO 171","SPEC","PHLO 110","PHLO 112","PHLO 173","PHLO 111","PHLO 120","PHLO 174","PHLO 181","PHLO 195","PHLO 197","PHLO 113","PHLO 182","PHLO 176","PHLO 178","PHLO 160","PHLO 184","PHLO 185"],
@@ -8,30 +8,99 @@
         "BSAPHY": ["PHYS 101","CHEM 18","CHEM 18.1","MATH 27","PHYS 102","PHYS 111","MATH 28","COMA 150","APHY 10.1","APHY 101","PHYS 103","PHYS 112","PHYS 104","PHYS 113","PHYS 121","PHYS 131","APHY 103","PHYS 115","PHYS 122","PHYS 132","PHYS 192.1","PHYS 141","PHYS 151","PHYS 165","PHYS 195","APHY 198","PHYS 142","APHY 191","APHY 199"],
         "BSCHEM": ["CHEM 18","CHEM 18.1","MCB 11","MATH 27","CHEM 19","CHEM 32","CHEM 32.1","MATH 28","PHYS 71","PHYS 71.1","CHEM 43","CHEM 43.1","PHYS 72","PHYS 72.1","CMSC 12","AMAT 152","CHEM 44","CHEM 44.1","CHEM 111","STAT 162","CHEM 161a","CHEM 111.1","CHEM 112","CHEM 137","CHEM 140","CHEM 161b","CHEM 112.1","CHEM 115","CHEM 137.1","CHEM 161.1","CHEM 180","CHEM 192","CHEM 198","CHEM 120","CHEM 131","CHEM 120.1","CHEM 171","CHEM 199"],
         "BSMATH": ["MATH 20","MATH 36","BIO 11.1","MATH 37","STAT 101","CHEM 18","CHEM 18.1","MATH 38","MATH 101","PHYS 51","PHYS 51.1","MATH 103","MATH 138","MATH 141","MATH 152","MATH 111","MATH 155","MATH 195","COMA 150","MATH 120","MATH 133","MATH 151","PI 10","MATH 198","MATH 135","MATH 165","MATH 181","MATH 192","MATH 199"],
-        "BSSTAT": ["MATH 27","BIO 30","STAT 101","STAT 135","MATH 28","CMSC 12","STAT 162","STAT 182","CMSC 21","ECON 11","STAT 144","STAT 168","MATH 182","CMSC 22","ABME 10","STAT 145","STAT 163","STAT 146","STAT 173","STAT 175","STAT 181","CMSC 127","STAT 147","STAT 151","STAT 156","STAT 174","STAT 192.1","COMA 198","ENG 10","STAT 148","STAT 165","STAT 191","STAT 157","STAT 167","STAT 183","STAT 199"]
+        "BSSTAT": ["MATH 27","BIO 30","STAT 101","STAT 135","MATH 28","CMSC 12","STAT 162","STAT 182","CMSC 21","ECON 11","STAT 144","STAT 168","MATH 182","CMSC 22","ABME 10","STAT 145","STAT 163","STAT 146","STAT 173","STAT 175","STAT 181","CMSC 127","STAT 147","STAT 151","STAT 156","STAT 174","STAT 192.1","COMA 198","ENG 10","STAT 148","STAT 165","STAT 191","STAT 157","STAT 167","STAT 183","STAT 199"],
+        "BSMST BIOLOGY": ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","EDUC 111","BIO 30","STAT 166","SPCM 156","MST 101d","DEVC 40","MST 40","EDUC 122","BOT 14","CHEM 160","PHYS 71","PHYS 71.1","COMA 150","MST 123","EDUC 144","BIO 150","MCB 11","ZOO 14","STAT 162","MST 195","MST 199","MST 200a","MATH 18","MST 191","MST 200b","HFDS 12","PHYS 72","PHYS 72.1"],
+        "BSMST CHEMISTRY": ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","CHEM 32","CHEM 32.1","BIO 30","STAT 162","SPCM 156","MST 101d","EDUC 122","DEVC 40","MST 40","CHEM 160","PHYS 71","PHYS 71.1","STAT 166","COMA 150","MST 123","EDUC 111","CHEM 160.1","PHYS 72","PHYS 72.1","MST 195","MST 200a","EDUC 144","CHEM 102","MATH 18","MST 200b","CHEM 180","MST 191","MST 199"],
+        "BSTMST MATH" : ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","EDUC 111","MATH 20","MATH 28","BIO 30","MST 101d","EDUC 122","DEVC 40","MST 40","MATH 18","MATH 101","STAT 166","COMA 150","MST 123","EDUC 144","PHYS 71","PHYS 71.1","STAT 162","SPCM 156","MST 195","MST 200a","MATH 103","PHYS 72","PHYS 72.1","MST 190","MST 200b","CHEM 160","MST 191","MST 199","AMAT 105"],
+        "BSMST PHYSICS" : ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","EDUC 111","PHYS 71","PHYS 71.1","BIO 30","MATH 18","MST 101d","EDUC 122","DEVC 40","MST 40","PHYS 72","PHYS 72.1","CHEM 160","STAT 162","COMA 150","MST 123","EDUC 144","APHY 101","STAT 166","SPCM 156","MST 195","MST 200a","APHY 102","PHYS 192.1","CMSC 12","MST 190","MST 199","MST 200b","PHYS 193.1","MST 191"],
+        "BSAMAT" : ["AMAT 19","MATH 36","BIO 11.1","MATH 37","STAT 101","CHEM 18","CHEM 18.1","AMAT 110","MATH 38","MATH 101","PHYS 51","PHYS 51.1","AMAT 105","AMAT 110","AMAT 152","AMAT 170","MATH 151","MATH 174","MATH 181","MATH 155","MATH 175","MATH 195","COMA 150","AMAT 198","AMAT 199"]
     },
 
     "units":{
-        "BSCS": {
-            "Thesis": [15, 15, 15, 15, 18, 18, 3, 16, 15],
-            "SP": [15, 15, 15, 15, 18, 18, 3, 17, 14]
+        "BAPHLO": {
+            "Thesis": [18, 18, 18, 15, 15, 18, 15, 15],
+            "SP": [18, 18, 18, 15, 15, 18, 15, 15]
         },
         "BASOC": {
             "Thesis": [15, 15, 6, 15, 15, 6, 15, 15, 3, 16, 15]
+        },
+        "BSAC": {
+            "Thesis": [17, 18, 19, 19, 20, 20, 20, 20, 18, 3, 20, 16]
         },
         "BSAPHY": {
             "Thesis": [18, 17, 18, 17, 18, 18, 3, 18, 16]
         },
         "BSCHEM": {
             "Thesis": [17, 19, 19, 17, 3, 18, 18, 3, 16 ,12]
+        },
+        "BSMATH": {
+            "Thesis": [16, 17, 16, 18, 18, 15, 3, 15, 13],
+            "SP": [16, 17, 16, 18, 18, 15, 3, 15, 13]
+        },
+        "BSSTAT": {
+            "Thesis": [18, 18, 18, 18, 18, 19, 3, 16, 15],
+            "SP": [18, 18, 18, 18, 18, 19, 3, 16, 15]
+        },
+        "BSMST": {
+            "Thesis": [],
+            "SP": []
+        },
+        "BACA": {
+            "Thesis": [],
+            "SP": []
+        },
+        "BSCS": {
+            "Thesis": [15, 15, 15, 15, 18, 18, 3, 16, 15],
+            "SP": [15, 15, 15, 15, 18, 18, 3, 17, 14]
+        },
+        "BSAMAT": {
+            "Thesis": [16, 17, 16, 18, 18, 15, 3, 15, 13],
+            "SP": [16, 17, 16, 18, 18, 15, 3, 15, 13]
         }
+        
     },
 
     "max_units":{
-        "BSCS": 130,
-        "BASOC": 136,
-        "BSAPHY": 143,
-        "BSCHEM": 142
+        "BAPHLO": {
+            "Thesis": 132,
+            "SP": 132
+        },
+        "BASOC": {
+            "Thesis": 136,
+            "SP": 0
+        },
+        "BSAC": {
+            "Thesis": 190,
+            "SP": 0
+        },
+        "BSAPHY": {
+            "Thesis": 143,
+            "SP": 0
+        },
+        "BSCHEM": {
+            "Thesis": 142,
+            "SP": 0
+        },
+        "BSMATH": {
+            "Thesis": 131,
+            "SP": 131
+        },
+        "BSSTAT": {
+            "Thesis": 0,
+            "SP": 143
+        },
+        "BACA": {
+            "Thesis": 145,
+            "SP": 0
+        },
+        "BSCS": {
+            "Thesis": 130,
+            "SP": 130
+        },
+        "BSAMAT": {
+            "Thesis": 131,
+            "SP": 131
+        }
 
     },
 
@@ -57,14 +126,125 @@
     },
 
     "elective": {
+        "BAPHLO": {
+            "Thesis": 9,
+            "SP": 9
+        },
         "BASOC": {
-            "Thesis": 6
+            "Thesis": 7
+        },
+        "BSAC": {
+            "Thesis": 0
         },
         "BSAPHY": {
             "Thesis": 7
         },
         "BSCHEM": {
             "Thesis": 3
+        },
+        "BSMATH": {
+            "Thesis": 4,
+            "SP": 5
+        },
+        "BSSTAT": {
+            "Thesis": 0,
+            "SP": 3
+        },
+        "BACA": {
+            "Thesis": 6
+        },
+        "BSCS": {
+            "Thesis": 5,
+            "SP": 6
+        },
+        "BSAMAT": {
+            "Thesis": 8,
+            "SP": 9
+        }
+    },
+
+    "specialization": {
+        "BSAC": {
+            "Required": 5,
+            "Courses": ["ANSC 111",
+                "ANSC 116",
+                "ANSC 121",
+                "ANSC 122",
+                "ANSC 143",
+                "ANSC 102",
+                "ENT 101",
+                "ENT 120",
+                "ENT 125",
+                "ENT 170",
+                "ENT 172",
+                "ENT 176",
+                "PPTH 101",
+                "PPTH 102",
+                "PPTH 131",
+                "PPTH 112",
+                "AGR 132",
+                "AGR 133",
+                "BOT 140",
+                "BOT 150",
+                "HORT 146",
+                "AGR 141",
+                "BOT 132",
+                "HORT 132",
+                "AGR 110",
+                "CSRC 101",
+                "CSRC 102",
+                "SOIL 140",
+                "SOIL 142",
+                "SOIL 130",
+                "SOIL 150",
+                "SOIL 120",
+                "FST 130",
+                "FST 140",
+                "FST 141",
+                "FST 161",
+                "FST 167",
+                "ABT 101",
+                "ABT 103",
+                "ABT 104",
+                "ABT 106",
+                "ABT 107",
+                "ABT 108",
+                "ABT 115",
+                "FST 115",
+                "ABT 120",
+                "ABT 140"
+                ]
+        },
+        "BACA":{
+            "Required": 7,
+            "Courses": ["SPCM 151",
+                "SPCM 151",
+                "SPCM 153",	
+                "SPCM 154",	
+                "SPCM 155",	
+                "SPCM 156",	
+                "SPCM 157",	
+                "SPCM 158",	
+                "SPCM 159",
+                "ENG 151",
+                "ENG 152",
+                "ENG 153",	
+                "ENG 154",	
+                "ENG 155",	
+                "ENG 156",	
+                "ENG 157",	
+                "ENG 158",	
+                "FIL 150",	
+                "FIL 155",	
+                "THEA 151",	
+                "THEA 151",	
+                "THEA 153",	
+                "THEA 154",	
+                "THEA 155",	
+                "THEA 156",	
+                "THEA 157"	
+	
+                ]
         }
     }
         
