--- a/backend/config.json
+++ b/backend/config.json
@@ -1,5 +1,5 @@
 {
-    "programs": ["BAPHLO", "BASOC", "BSAC", "BSAPHY", "BSCHEM", "BSMATH", "BSSTAT", "BSMST", "BACA", "BSCS", "BSAMAT"],
+    "programs": ["BAPHLO", "BASOC", "BSAC", "BSAPHY", "BSCHEM", "BSMATH", "BSSTAT", "BACA", "BSCS", "BSAMAT", "BSMST BIO", "BSMST CHEM", "BSMST MATH", "BSMST PHYS"],
     "course": {
         "BSCS": ["CMSC 12", "CMSC 56", "MATH 27", "CMSC 21", "CMSC 57", "MATH 28", "CMSC 22", "CMSC 150", "CMSC 123", "CMSC 130", "CMSC 23", "CMSC 100", "CMSC 127", "CMSC 131", "STAT 101", "CMSC 124", "CMSC 125", "CMSC 141", "CMSC 170", "CMSC 132", "CMSC 128", "CMSC 142", "CMSC 137", "CMSC 173", "CMSC 180", "ENG 10"],
         "BAPHLO": ["PHLO 11","PHLO 12","ECON 11","POSC 10","PHLO 150","PHLO 171","SPEC","PHLO 110","PHLO 112","PHLO 173","PHLO 111","PHLO 120","PHLO 174","PHLO 181","PHLO 195","PHLO 197","PHLO 113","PHLO 182","PHLO 176","PHLO 178","PHLO 160","PHLO 184","PHLO 185"],
@@ -9,10 +9,10 @@
         "BSCHEM": ["CHEM 18","CHEM 18.1","MCB 11","MATH 27","CHEM 19","CHEM 32","CHEM 32.1","MATH 28","PHYS 71","PHYS 71.1","CHEM 43","CHEM 43.1","PHYS 72","PHYS 72.1","CMSC 12","AMAT 152","CHEM 44","CHEM 44.1","CHEM 111","STAT 162","CHEM 161a","CHEM 111.1","CHEM 112","CHEM 137","CHEM 140","CHEM 161b","CHEM 112.1","CHEM 115","CHEM 137.1","CHEM 161.1","CHEM 180","CHEM 192","CHEM 198","CHEM 120","CHEM 131","CHEM 120.1","CHEM 171"],
         "BSMATH": ["MATH 20","MATH 36","BIO 11.1","MATH 37","STAT 101","CHEM 18","CHEM 18.1","MATH 38","MATH 101","PHYS 51","PHYS 51.1","MATH 103","MATH 138","MATH 141","MATH 152","MATH 111","MATH 155","MATH 195","COMA 150","MATH 120","MATH 133","MATH 151","PI 10","MATH 198","MATH 135","MATH 165","MATH 181","MATH 192"],
         "BSSTAT": ["MATH 27","BIO 30","STAT 101","STAT 135","MATH 28","CMSC 12","STAT 162","STAT 182","CMSC 21","ECON 11","STAT 144","STAT 168","MATH 182","CMSC 22","ABME 10","STAT 145","STAT 163","STAT 146","STAT 173","STAT 175","STAT 181","CMSC 127","STAT 147","STAT 151","STAT 156","STAT 174","STAT 192.1","COMA 198","ENG 10","STAT 148","STAT 165","STAT 191","STAT 157","STAT 167","STAT 183"],
-        "BSMST BIOLOGY": ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","EDUC 111","BIO 30","STAT 166","SPCM 156","MST 101d","DEVC 40","MST 40","EDUC 122","BOT 14","CHEM 160","PHYS 71","PHYS 71.1","COMA 150","MST 123","EDUC 144","BIO 150","MCB 11","ZOO 14","STAT 162","MST 195","MST 200a","MATH 18","MST 191","MST 200b","HFDS 12","PHYS 72","PHYS 72.1"],
-        "BSMST CHEMISTRY": ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","CHEM 32","CHEM 32.1","BIO 30","STAT 162","SPCM 156","MST 101d","EDUC 122","DEVC 40","MST 40","CHEM 160","PHYS 71","PHYS 71.1","STAT 166","COMA 150","MST 123","EDUC 111","CHEM 160.1","PHYS 72","PHYS 72.1","MST 195","MST 200a","EDUC 144","CHEM 102","MATH 18","MST 200b","CHEM 180","MST 191"],
+        "BSMST BIO": ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","EDUC 111","BIO 30","STAT 166","SPCM 156","MST 101d","DEVC 40","MST 40","EDUC 122","BOT 14","CHEM 160","PHYS 71","PHYS 71.1","COMA 150","MST 123","EDUC 144","BIO 150","MCB 11","ZOO 14","STAT 162","MST 195","MST 200a","MATH 18","MST 191","MST 200b","HFDS 12","PHYS 72","PHYS 72.1"],
+        "BSMST CHEM": ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","CHEM 32","CHEM 32.1","BIO 30","STAT 162","SPCM 156","MST 101d","EDUC 122","DEVC 40","MST 40","CHEM 160","PHYS 71","PHYS 71.1","STAT 166","COMA 150","MST 123","EDUC 111","CHEM 160.1","PHYS 72","PHYS 72.1","MST 195","MST 200a","EDUC 144","CHEM 102","MATH 18","MST 200b","CHEM 180","MST 191"],
         "BSTMST MATH" : ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","EDUC 111","MATH 20","MATH 28","BIO 30","MST 101d","EDUC 122","DEVC 40","MST 40","MATH 18","MATH 101","STAT 166","COMA 150","MST 123","EDUC 144","PHYS 71","PHYS 71.1","STAT 162","SPCM 156","MST 195","MST 200a","MATH 103","PHYS 72","PHYS 72.1","MST 190","MST 200b","CHEM 160","MST 191","AMAT 105"],
-        "BSMST PHYSICS" : ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","EDUC 111","PHYS 71","PHYS 71.1","BIO 30","MATH 18","MST 101d","EDUC 122","DEVC 40","MST 40","PHYS 72","PHYS 72.1","CHEM 160","STAT 162","COMA 150","MST 123","EDUC 144","APHY 101","STAT 166","SPCM 156","MST 195","MST 200a","APHY 102","PHYS 192.1","CMSC 12","MST 190","MST 200b","PHYS 193.1","MST 191"],
+        "BSMST PHYS" : ["MST 101a","BIO 11.1","CHEM 18","CHEM 18.1","PHYS 50","MATH 25","MST 101b","BIO 14","CHEM 40","CHEM 40.1","AMAT 19","MATH 27","MST 101c","EDUC 102","EDUC 111","PHYS 71","PHYS 71.1","BIO 30","MATH 18","MST 101d","EDUC 122","DEVC 40","MST 40","PHYS 72","PHYS 72.1","CHEM 160","STAT 162","COMA 150","MST 123","EDUC 144","APHY 101","STAT 166","SPCM 156","MST 195","MST 200a","APHY 102","PHYS 192.1","CMSC 12","MST 190","MST 200b","PHYS 193.1","MST 191"],
         "BSAMAT" : ["AMAT 19","MATH 36","BIO 11.1","MATH 37","STAT 101","CHEM 18","CHEM 18.1","AMAT 110","MATH 38","MATH 101","PHYS 51","PHYS 51.1","AMAT 105","AMAT 110","AMAT 152","AMAT 170","MATH 151","MATH 174","MATH 181","MATH 155","MATH 175","MATH 195","COMA 150","AMAT 198"]
     },
 
@@ -41,10 +41,6 @@
             "Thesis": [18, 18, 18, 18, 18, 19, 3, 16, 15],
             "SP": [18, 18, 18, 18, 18, 19, 3, 16, 15]
         },
-        "BSMST": {
-            "Thesis": [],
-            "SP": []
-        },
         "BACA": {
             "Thesis": [],
             "SP": []
@@ -56,6 +52,22 @@
         "BSAMAT": {
             "Thesis": [16, 17, 16, 18, 18, 15, 3, 15, 13],
             "SP": [16, 17, 16, 18, 18, 15, 3, 15, 13]
+        },
+        "BSMST BIO": {
+            "Thesis": [],
+            "SP": [20, 20, 19, 21, 21, 16, 15, 11]
+        },
+        "BSMST CHEM": {
+            "Thesis": [],
+            "SP": [20, 20, 21, 21, 16, 21, 15, 7]
+        },
+        "BSMST MATH": {
+            "Thesis": [],
+            "SP": [20, 20, 19, 19, 19, 20, 15, 10]
+        },
+        "BSMST PHYS": {
+            "Thesis": [],
+            "SP": [20, 20, 21, 21, 20, 17, 15, 6]
         }
         
     },
@@ -100,6 +112,22 @@
         "BSAMAT": {
             "Thesis": 131,
             "SP": 131
+        },
+        "BSMST BIO": {
+            "Thesis": 0,
+            "SP": 140
+        },
+        "BSMST CHEM": {
+            "Thesis": 0,
+            "SP": 141
+        },
+        "BSMST MATH": {
+            "Thesis": 0,
+            "SP": 142
+        },
+        "BSMST PHYS": {
+            "Thesis": 0,
+            "SP": 142
         }
 
     },
@@ -160,6 +188,22 @@
         "BSAMAT": {
             "Thesis": 8,
             "SP": 9
+        },
+        "BSMST BIO": {
+            "Thesis": 0,
+            "SP": 0
+        },
+        "BSMST CHEM": {
+            "Thesis": 0,
+            "SP": 0
+        },
+        "BSMST MATH": {
+            "Thesis": 0,
+            "SP": 0
+        },
+        "BSMST PHYSICS": {
+            "Thesis": 0,
+            "SP": 0
         }
     },
 
